# sifli_zephyr

./: .gitignore  CMakeLists.txt  Kconfig  README.md
boards/sifli/: Kconfig
drivers/: CMakeLists.txt  Kconfig  ipc_os_port.h  sflb32_bthci.c
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.sf32lb  adc_sf32lb.c
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.sf32lb  clock_sf32lb.c  sf32lb_clock_control.h
drivers/counter/: CMakeLists.txt  Kconfig  Kconfig.sf32lb  counter_sf32lb.c
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.sf32lb  dma_sf32lb.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.sf32lb  flash_sf32lb.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.sf32lb  gpio_sf32lb.c
drivers/i2c/: CMakeLists.txt  Kconfig.sf32lb  i2c_sf32lb.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.sf32lb  pinctrl_sf32lb.c
modules/: Kconfig  Kconfig.sf32lb
soc/sifli/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  soc.yml
soc/sifli/sf32lb52x/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.defconfig .sf32lb527  Kconfig.defconfig.sf32lb520  Kconfig.defconfig.sf32lb523  Kconfig.defconfig.sf32lb525  Kconfig.soc  lcpu.c  pinctrl_soc.h  power.c  poweroff.c  ptab.h  rtconfig.h  soc.c  soc.h
soc/sifli/sf32lb56x/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.defconfig .sf32lb567  Kconfig.defconfig.sf32lb561  Kconfig.defconfig.sf32lb563  Kconfig.defconfig.sf32lb566  Kconfig.soc  power.c  rtconfig.h  soc.h
soc/sifli/sf32lb58/: Kconfig  Kconfig.defconfig  Kconfig.defconfig.sf32lb58_hcpu  Kconfig.soc  soc.h
zephyr/: module.yml
(+74 files in other folders)
